k8s/paiement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paiement-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paiement-service
  template:
    metadata:
      labels:
        app: paiement-service
    spec:
      containers:
      - name: paiement-service
        image: paiement-service:latest
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: paiement-service
spec:
  selector:
    app: paiement-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
